05 Sep 2006 mipsator
 * updated values for compiler detection in SETTINGS to sync with pmk.

# snapshot 20060902

01 Sep 2006 mipsator
 * fixed a regression in rev. 102 that prevented from generating a
   complete pmkfile (header and library checks were missing).

17 Aug 2006 mipsator
 * rewritten compiler detection for shared lib support.
 * improved shared lib support verification.

03 Aug 2006 mipsator
 * much mode #defines in compiler detection module.

15 Jul 2006 mipsator
 * a long time since the last commit but had no feeling to work on pmk until
 last days. Here is some cleanup and the latest work done.

# snapshot 20060319

19 Mar 2006 mipsator
 * import latest work on library support (both static and dynamic).

07 Mar 2006 mipsator
 * improved a bit the makefile generation before completing library
   generation support.

01 Mar 2006 mipsator
 * still going on with library handling. Result is still not useable yet
   as library generation targets are missing. That should be the last
   step before completion.

27 Feb 2006 mipsator
 * added hash_extract() to extract data from an hash table.
 * added more serious partial lib support.

05 Feb 2006 mipsator
 * added some experimental stuff into pmkscan to handle libraries
   lately. This stuff could make current unstable as i have not enough
   time to make sure all is fine before commit. I'll notifiy when
   everything will come back to normality.

30 Jan 2006 mipsator
 * pmk now inform when compiler has not been detected before checking
   for shared library support.

19 Jan 2006 mipsator
 * some temporary fixes for pmkcfg.sh portability. Better fixes will
   come further ...

16 Jan 2006 mipsator
 * fixed pmkcfg.sh to correctly set library flags.
 * added isnan() and seteuid() functions in pmkcfg.sh for failing
   architectures.

13 Jan 2006 mipsator
 * fixed missing tokens in detect_cpu.c for kw_pmkcpu.
 * fixed CPP substitution in pmkcfg.sh script.

# snapshot 20051215

14 Dec 2005 mipsator